API ChangeLog 

11-Oct-2007	Troy A. Griffitts <scribe@crosswire.org>
	Added new RawText4 and RawCom4 drivers which allow
		for a 4 byte record size.  Patch submitted by
		Doug Rintoul <doug_rintoul at sil dot org>

6-Oct-2007	Troy A. Griffitts <scribe@crosswire.org>
	Added SWBuf::stripPrefix method which works nice
		for returning and stripping stuff like
		'lemma' from "lemma:G1234"
	Added part params to XMLTag::setAttribute
	Changed OSISStrongs to only strip lemma parts with
		strong prefix
	Applied fix for newer version of gcc which errors if
		create perms are not passed to ::open
		(Deji Akingunola <dakingun at gmail dot com>)
	Modified OSISLemma to only strip lemma parts with
		lemma.* prefix or no prefix
	Added UTF-8 processing for case insensitive unindexed
		searching

13-Sep-2007	Troy A. Griffitts <scribe@crosswire.org>
	Added InstallMgr::getModuleStatus to return a list
		of differences between the modules of two SWMgr
		objects

03-Mar-2007 	Joachim Ansorg <jansorg@crosswire.org>
	Added osis morph segments filter include file to the dist
	Fixed wrong stricmp in SWObject

10-Dec-2006	Troy A. Griffitts <scribe@crosswire.org>
	Added example: examples/cmdline/verserangeparse.cpp

2-Dec-2006	Troy A. Griffitts <scribe@crosswire.org>
	Added example: examples/cmdline/listoptions.cpp
	Added entryAttributes processing for morph segs

23-Nov-2006	Daniel Glassey <dglassey@crosswire.org>
	Use acx_clucene.m4 from CLucene contribs to detect CLucene
	apply Debian patch for flatapi for 64-bit portability

20-Nov-2006	Troy A. Griffitts <scribe@crosswire.org>
	Moved treekey and genbook tests to utilities
	Finished first stable version of rewrite of imp2gbs
	Fixed bug in treekey where didn't break on found sibling
	Added .trim to localName segments of genbook path,
		e.g. /this / is/a/test/  - all spaces will be removed
	Added recognition of additional greek accent ~
		in UTF8GreekAccents filter
	Fixed bug in RawGenBook::setText where default size
		is < 0, not false